--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -261,7 +261,7 @@ body {
 
 
 .nav-links a {
-  color: var(--text-color);
+  /* color: var(--text-color); */
   margin: 0 15px;
   text-decoration: none;
   font-size: 18px;
