--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -424,7 +424,7 @@ body {
 h2 {
   font-size: 3em;
   margin-bottom: 30px;
-  color: var(--primary-color);
+  /* color: var(--primary-color); */
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
